--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,10 @@
 
 /* ROOT */
 
+:root {
+    --red-color: rgb(253, 8, 8);
+}
+
 * {
 
  margin:0;
@@ -59,7 +63,7 @@ header {
 }
 
 .contacts-main a:hover {
-    color: red;
+    color: var(--red-color);
     
 }
 
@@ -113,7 +117,7 @@ aside p {
 }
 aside h3 {
 
-    color: red;
+    color: var(--red-color);
 }
 
 /* FOOTER */
@@ -122,6 +126,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    height: 90px;
     background-color: rgb(253, 246, 26)
 
 }
@@ -129,6 +134,7 @@ footer {
 footer a{
     text-decoration: none;
     color: rgb(31, 28, 28);
+    font-size: 10px;
     
     
 }
@@ -136,14 +142,15 @@ footer a{
 footer a:hover {
    
     background-color: black;
-    color: white;
+    color: rgb(255, 255, 255);
     padding: 0 5px;
 }
 
 .footer-slogan {
     padding: 5px 0;
-    color: red;
-    font-family: 'Roboto', bold, sans-serif;
+    color: var(--red-color);
+    font-family:-apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
+    font-size: 10px;
 }
 
 
