--- a/styles/index.css
+++ b/styles/index.css
@@ -1,194 +1,149 @@
-@import url('https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,400;0,700;1,500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,400;0,700;1,500&display=swap");
 
-/* ROOT */
-
-:root {
-    --red-color: rgb(253, 8, 8);
-}
 
 * {
-
- margin:0;
- padding:0;
- font-family: 'Georama', sans-serif;
- box-sizing: border-box;
- color: rgb(55, 55, 128);
-
+  margin: 0;
+  padding: 0;
+  font-family: "Georama", sans-serif;
+  box-sizing: border-box;
+  color: rgb(55, 55, 128);
 }
-
-
-
 .main-container {
-    
-    
-    margin:  auto;
-    max-width: 650px;
-    
+  margin: auto;
+  max-width: 650px;
 }
 
 /* HEADER */
 
 header {
-    display: flex;
-    
+  display: flex;
 }
 
 .foto-cv {
-
-    padding: 5px;
-    border-radius: 15px;
-
+  padding: 5px;
+  border-radius: 15px;
 }
 
 .contacts-main {
-
-    padding: 15px;
-    line-height: 1.9rem;
+  padding: 15px;
+  line-height: 1.9rem;
 }
 
 .contacts-main h1 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .contacts-main h5 {
-
-    margin-left: 15px;
-    
+  margin-left: 15px;
 }
 
 .contacts-main a {
-
-     text-decoration: none;
-     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
+  text-decoration: none;
+  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Helvetica Neue",
+    sans-serif;
 }
 
 .contacts-main a:hover {
-    color: var(--red-color);
-    
+  color: var(--red-color);
 }
 
 .contacts-main h3 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 /* MAIN */
 
 main {
-
-    display: grid;
-    grid-template-columns: 1.5fr 3fr;
-    grid-auto-columns: auto;
-    padding: 10px;
-
+  display: grid;
+  grid-template-columns: 1.5fr 3fr;
+  grid-auto-columns: auto;
+  padding: 10px;
 }
 
-
-
 main section {
-
-    padding: 10px;
-    margin: 5px;
+  padding: 10px;
+  margin: 5px;
 }
 
 .section-education {
-
-    margin-left: 30px;
+  margin-left: 30px;
 }
 main h2 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 main div {
-    padding: 5px;
+  padding: 5px;
 }
 
 /* ASIDE */
 
 aside {
-
-    margin-bottom: 20px;
-    padding: 5px;
-
+  margin-bottom: 20px;
+  padding: 5px;
 }
 
 aside p {
-
-   margin: 10px;
+  margin: 10px;
 }
 aside h3 {
-
-    color: var(--red-color);
+  color: var(--red-color);
 }
 
 /* FOOTER */
 
 footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 90px;
-    background-color: rgb(253, 246, 26)
-
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 90px;
+  background-color: rgb(253, 246, 26);
 }
 
 .footer-logo-github {
-
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-
-
-footer a{
-    text-decoration: none;
-    color: rgb(31, 28, 28);
-    font-size: 10px;
-    
-    
+footer a {
+  text-decoration: none;
+  color: rgb(31, 28, 28);
+  font-size: 10px;
 }
 
 footer a:hover {
-   
-    background-color: black;
-    color: rgb(255, 255, 255);
-}   
-
-.footer-slogan {
-    padding: 5px 0;
-    color: var(--red-color);
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 10px;
+  background-color: black;
+  color: rgb(255, 255, 255);
 }
 
+.footer-slogan {
+  padding: 5px 0;
+  color: var(--red-color);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 10px;
+}
 
-@media(max-width:500px) {
+@media (max-width: 500px) {
+  header {
+    display: grid;
+  }
+  header img {
+    margin-left: 10px;
+  }
 
+  main {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 
+  .section-education {
+    margin-left: 5px;
+  }
 
-    header {
-       display: grid;
-    }
-    header img {
-          
-        margin-left: 10px;
-    }
-  
-
-    main {
-        display: grid;
-        grid-template-columns: 1fr;
-
-    }
-
-    .section-education {
-
-        margin-left: 5px;
-    }
-
-    footer {
-        display: grid;
-        grid-template-columns: 2fr 4fr 2fr 3fr;
-        padding: 6px;
-    }
-
+  footer {
+    display: grid;
+    grid-template-columns: 2fr 4fr 2fr 3fr;
+    padding: 6px;
+  }
 }
