--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,400;0,700;1,500&display=swap");
 
+/* ROOT */
+
+:root {
+  --red-color: rgb(196, 59, 59);
+}
 
 * {
   margin: 0;
