--- a/styles/index.css
+++ b/styles/index.css
@@ -23,6 +23,11 @@
 header {
   display: flex;
 }
+.left-side img {
+  width: 300px;
+  background-size: 100%;
+  
+}
 
 .foto-cv {
   padding: 5px;
@@ -122,7 +127,7 @@ main div {
   color: aliceblue;
 }
 .typescript-li {
-  width: 140px;
+  width: 150px;
   height: 20px;
   margin-bottom: 4px;
   padding-left: 10px;
