--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,400;0,700;1,500&display=swap");
 
 /* ROOT */
-
 :root {
-  --red-color: rgb(55, 55, 128);
+  --blue-color: rgb(55, 55, 128);
 }
-
 * {
   margin: 0;
   padding: 0;
@@ -17,98 +15,61 @@
   margin: auto;
   max-width: 800px;
 }
-
 /* HEADER */
-
 header {
   display: flex;
 }
 .left-side img {
   width: 300px;
   background-size: 100%;
-  
 }
-
 .foto-cv {
   padding: 5px;
   border-radius: 15px;
 }
 .contacts {
   display: grid;
-  gap: 30px;
+  gap: 10px;
   width: 300px;
   height: 600px;
-  list-style: none;
   padding: 10px;
 }
-
-
+.contacts a {
+text-decoration: none;
+}
 .contacts-main {
   padding: 15px;
   line-height: 1.9rem;
   background-color: rgb(233, 233, 233);
   border-radius: 4px;
 }
-
 .contacts-main h1 {
   margin-bottom: 10px;
 }
-
 .contacts-main h5 {
   margin-left: 15px;
 }
-
 .contacts-main a {
   text-decoration: none;
   font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Helvetica Neue",
     sans-serif;
 }
-
-.contacts-main a:hover {
-  color: var(--red-color);
-}
-
-.contacts-main h3 {
-  margin-top: 20px;
-}
-
 /* MAIN */
-
 main {
   display: grid;
   grid-template-columns: 1.5fr 3fr;
   grid-auto-columns: auto;
   padding: 10px;
 }
-
-main section {
-  padding: 10px;
-  margin: 5px;
-}
-
-.section-education {
-  margin-left: 30px;
-}
-main h2 {
-  margin-bottom: 10px;
-}
-
-main div {
-  padding: 5px;
-}
-
 /* ASIDE */
-
+.technologies {
+  color: rgb(158, 78, 84);
+}
 .experience {
   display: grid;
   justify-content: flex-end;
-  font-size: 13px;
+  font-size: 14px;
   list-style: none;
-  
-}
-
-.skills-map {
-  margin-top: 100px;
 }
 .react-li {
   width: 220px;
@@ -150,9 +111,7 @@ main div {
   background-color: rgb(158, 78, 84);
   color: aliceblue;
 }
-
 /* FOOTER */
-
 footer {
   display: flex;
   align-items: center;
@@ -160,31 +119,26 @@ footer {
   height: 90px;
   background-color: rgb(255, 255, 255);
 }
-
 .footer-logo-github {
   display: flex;
   align-items: center;
 }
-
 footer a {
   text-decoration: none;
   color: rgb(31, 28, 28);
   font-size: 10px;
 }
-
 footer a:hover {
   background-color: black;
   color: rgb(255, 255, 255);
 }
-
 .footer-slogan {
   padding: 5px 0;
-  color: var(--red-color);
+  color: var(--blue-color);
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 10px;
-}
-
+} 
 @media (max-width: 500px) {
   header {
     display: grid;
@@ -192,16 +146,13 @@ footer a:hover {
   header img {
     margin-left: 10px;
   }
-
   main {
     display: grid;
     grid-template-columns: 1fr;
   }
-
   .section-education {
     margin-left: 5px;
   }
-
   footer {
     display: grid;
     grid-template-columns: 2fr 4fr 2fr 3fr;
